# dependabot-check

./: CLAUDE.md  README.md  check_vulns.py  dependabot_output_example.json  installed_versions_example.json  pyproject.toml
tests/: test_check_vulns.py
