[project]
name = "dependabot-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "packaging>=23.0",
]

[project.scripts]
dependabot-check = "check_vulns:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
